--- a/style.css
+++ b/style.css
@@ -5,43 +5,44 @@
     box-sizing: border-box;
 }
 body{
-    background: #080808;
-    color: #fff;
+    background: #0a192f;
+    color: #ccd6f6;
 }
 
-#header{
+#home{
     width: 100%;
     height: 100vh;
-    background-image: url(images/MainJon.png);
-    background-size: cover;
-    background-position: center;
-}
-
-.container{
-    padding: 10px 10%;
 }
 
 nav{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+    background-color: #173c48;
+    padding: 10px 8%;
+    z-index: 1000;
 }
 
 .logo{
-    width: 300px;
+    width: 240px;
 }
 
 nav ul li{
     display: inline-block;
     list-style: none;
-    margin: 10px 20px;
+    margin: 10px 10px;
 }
 
 nav ul li a{
-    color: #fff;
+    color: #ccd6f6;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 17px;
+    font-weight: bold;
     position: relative;
 }
 
@@ -49,52 +50,302 @@ nav ul li a::after{
     content: '';
     width: 0;
     height: 3px;
-    background-color: #ff3131;
+    background-color: #47b4a1;
+    box-shadow: 0 0 5px 0 #47b4a1;
+
     position: absolute;
     left: 0;
     bottom: -6px;
     transition: 0.5s;
 }
 
+nav ul li a:active,
+nav ul li a:focus,
+nav ul li a:hover{
+    color: #8892b0;
+}
+
+nav ul li a:active::after,
+nav ul li a:focus::after,
 nav ul li a:hover::after{
     width: 100%;
 }
 
-.header-text{
-    margin-top: 20%;
+.home{
+    margin-top: 5%;
+    padding: 2% 5%;
+    display: flex;
+    justify-content:space-between;
+    flex-wrap: wrap;
+}
+
+.home-text{
+    margin-top: 22%;
+    margin-left: 3%;
+    margin-bottom: 5%;
     font-size: 30px;
+    color: #8892b0;
 }
 
-.header-text h1{
-    font-size: 60px;
+.home-text h1{
+    font-size: 80px;
     margin-top: 20px;
+    color:#ccd6f6;
 }
 
-.header-text h1 span{
-    color: #ff3131;
+.home-text h1 span{
+    font-size: 120px;
+    color: #47b4a1;
+}
+
+.home-image{
+    padding: 0;
+    width: 50%;
+    height: auto;
+}
+
+.home-image img{
+    width: 80%;
+    height: auto;
+    animation: mainJon 5s ease-in-out infinite;
+    transition: all 1s ease-in-out;
+    box-shadow: 0 5px 5px 5px #47b4a1;
+
+}
+
+@keyframes mainJon{
+    0%, 100%{
+        border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+    }
+    50%{
+        border-radius: 30% 60% 70% 40% / 50% 60% 30% 60%;
+    }
 }
 
 /*------------------------about-----------------------*/
 
 #about{
-    padding: 80px 0;
-    color: #ababab;
+    padding: 20px 5%;
+    color: #8892b0;
 }
 
 .row{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    height: auto;
 }
 
 .about-col-1{
-    flex-basis: 35%;
-}
-
-.about-col-1 img{
+    flex-basis: 30%;
+    position: relative;
+    height: auto;
     width: 100%;
 }
 
-.about-col-2{
-    flex-basis: 60%;
+.about-col-1 img{
+    position: absolute;
+    width: 100%;
+    height: auto;
 }
+
+.about-col-1 .animated-aboutme2{
+    animation: aboutme2 5s ease-in-out infinite;
+    transition: all 1s ease-in-out;
+}
+
+@keyframes aboutme2{
+    0%, 100% {
+        transform: translateX(0%) translateY(2%);
+    }
+    50% {
+        transform: translateX(1%);
+    }
+}
+
+.about-col-1 .animated-aboutme3{
+    animation: aboutme3 5s ease-in-out infinite;
+    transition: all 1s ease-in-out;
+}
+
+@keyframes aboutme3{
+    0%, 100% {
+        transform: translateX(0%) translateY(1%);
+    }
+    50% {
+        transform: translateX(-1%);
+    }
+}
+
+.about-col-1 .animated-aboutme4{
+    animation: aboutme4 5s ease-in-out infinite;
+    transition: all 1s ease-in-out;
+}
+
+@keyframes aboutme4{
+    0%, 100% {
+        transform: translateY(0%);
+    }
+    50% {
+        transform: translateY(2%);
+    }
+}
+
+.about-col-1 .animated-aboutme5{
+    animation: aboutme5 5s ease-in-out infinite;
+    transition: all 1s ease-in-out;
+}
+
+@keyframes aboutme5{
+    0%, 100% {
+        transform: translateX(0%);
+    }
+    50% {
+        transform: translateX(2%);
+    }
+}
+
+.about-col-1 .animated-aboutme6{
+    animation: aboutme6 5s ease-in-out infinite;
+    transition: all 1s ease-in-out;
+}
+
+@keyframes aboutme6{
+    0%, 100% {
+        transform: translateX(0%) translateY(0%);
+    }
+    50% {
+        transform: translateX(1%) translateY(2%);
+    }
+}
+
+.about-col-1 .animated-aboutme7{
+    animation: aboutme7 5s ease-in-out infinite;
+    transition: all 1s ease-in-out;
+}
+
+@keyframes aboutme7{
+    0%, 100% {
+        transform: translateX(0%);
+    }
+    50% {
+        transform: translateX(2%);
+    }
+}
+
+.about-col-1 .animated-aboutme8{
+    animation: aboutme8 5s ease-in-out infinite;
+    transition: all 1s ease-in-out;
+}
+
+@keyframes aboutme8{
+    0%, 100% {
+        transform: translateX(0%) translateY(0%);
+    }
+    50% {
+        transform: translateX(-2%) translateY(3%);
+    }
+}
+
+.about-col-1 .animated-aboutme9{
+    animation: aboutme9 5s ease-in-out infinite;
+    transition: all 1s ease-in-out;
+}
+
+@keyframes aboutme9{
+    0%, 100% {
+        transform:scale3d(0.8,0.8,1);
+    }
+    50% {
+        transform:scale3d(1,1,1);
+    }
+}
+
+.about-col-2{
+    flex-basis: 65%;
+    margin-top: 5%;
+}
+
+.about-col-2 h1{
+    font-size: 50px;
+    color: #ccd6f6;
+}
+
+.about-col-2 h1 span{
+    color:#47b4a1;
+}
+
+.about-col-2 p{
+    padding-top: 5px;
+    font-size: 18px;
+}
+
+.tab-titles{
+    display: flex;
+    margin: 20px 0 40px;;
+}
+
+.tab-links{
+    margin-right: 80px;
+    font-size: 20px;
+    font-weight: 600;
+    color:#ccd6f6;
+    cursor: pointer;
+    position: relative;
+}
+
+.tab-links::after{
+    content: '';
+    width: 0;
+    height: 3px;
+    background-color: #47b4a1;
+    box-shadow: 0 0 5px 0 #47b4a1;
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    transition: 0.5s;
+}
+
+.tab-links.active-link::after{
+    width: 100%;
+}
+.tab-titles{
+    margin-top: 5%;
+}
+
+.tab-contents ul li{
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 1.5;
+    list-style: none;
+    margin: 10px 0;
+}
+
+.tab-contents ul li span{
+    color: #2e776b;
+    font-weight: 500;
+    font-size: 16px;
+    font-weight: 580;
+}
+
+.tab-contents{
+    display: none;
+}
+
+.tab-contents.active-tab{
+    display: block;
+}
+
+.tab-contents img{
+    width: 80px;
+    border-radius: 50%;
+    box-shadow: 0 0 5px 3px #47b4a1;
+}
+
+
+
+
+
+
+
+/*---------------------------------------42:12
