--- a/style.css
+++ b/style.css
@@ -5,8 +5,12 @@
     box-sizing: border-box;
 }
 body{
-    background: #0a192f;
     color: #ccd6f6;
+    background-image: url(images/homeBackground.jpg);
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+
 }
 
 #home{
@@ -59,24 +63,20 @@ nav ul li a::after{
     transition: 0.5s;
 }
 
-nav ul li a:active,
-nav ul li a:focus,
 nav ul li a:hover{
-    color: #8892b0;
+    color: #b4c0e6;
 }
 
-nav ul li a:active::after,
-nav ul li a:focus::after,
 nav ul li a:hover::after{
     width: 100%;
 }
 
 .home{
-    margin-top: 5%;
+    margin-top: 2%;
     padding: 2% 5%;
     display: flex;
     justify-content:space-between;
-    flex-wrap: wrap;
+    align-items: center;
 }
 
 .home-text{
@@ -84,11 +84,11 @@ nav ul li a:hover::after{
     margin-left: 3%;
     margin-bottom: 5%;
     font-size: 30px;
-    color: #8892b0;
+    color: #aab6da;
 }
 
 .home-text h1{
-    font-size: 80px;
+    font-size: 100px;
     margin-top: 20px;
     color:#ccd6f6;
 }
@@ -99,171 +99,57 @@ nav ul li a:hover::after{
 }
 
 .home-image{
-    padding: 0;
+    margin-top: 5%;
     width: 50%;
-    height: auto;
 }
 
 .home-image img{
     width: 80%;
     height: auto;
-    animation: mainJon 5s ease-in-out infinite;
-    transition: all 1s ease-in-out;
-    box-shadow: 0 5px 5px 5px #47b4a1;
-
-}
-
-@keyframes mainJon{
-    0%, 100%{
-        border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
-    }
-    50%{
-        border-radius: 30% 60% 70% 40% / 50% 60% 30% 60%;
-    }
+    box-shadow: 0 0 10px 5px #47b4a1;
+    border-radius: 50% 60% 40% 70%;
 }
 
 /*------------------------about-----------------------*/
 
 #about{
-    padding: 20px 5%;
+    margin: 20px 2%;
     color: #8892b0;
 }
 
 .row{
+    background: #071427;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     flex-wrap: wrap;
     height: auto;
+    border-radius: 30px;
+    box-shadow: 0 0 10px 5px #47b4a1;
 }
 
 .about-col-1{
     flex-basis: 30%;
     position: relative;
     height: auto;
-    width: 100%;
 }
 
 .about-col-1 img{
-    position: absolute;
-    width: 100%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-left: 20%;
+    position: relative;
+    width: 70%;
     height: auto;
+    border-radius: 20px;    
 }
 
-.about-col-1 .animated-aboutme2{
-    animation: aboutme2 5s ease-in-out infinite;
-    transition: all 1s ease-in-out;
-}
-
-@keyframes aboutme2{
-    0%, 100% {
-        transform: translateX(0%) translateY(2%);
-    }
-    50% {
-        transform: translateX(1%);
-    }
-}
-
-.about-col-1 .animated-aboutme3{
-    animation: aboutme3 5s ease-in-out infinite;
-    transition: all 1s ease-in-out;
-}
-
-@keyframes aboutme3{
-    0%, 100% {
-        transform: translateX(0%) translateY(1%);
-    }
-    50% {
-        transform: translateX(-1%);
-    }
-}
-
-.about-col-1 .animated-aboutme4{
-    animation: aboutme4 5s ease-in-out infinite;
-    transition: all 1s ease-in-out;
-}
-
-@keyframes aboutme4{
-    0%, 100% {
-        transform: translateY(0%);
-    }
-    50% {
-        transform: translateY(2%);
-    }
-}
-
-.about-col-1 .animated-aboutme5{
-    animation: aboutme5 5s ease-in-out infinite;
-    transition: all 1s ease-in-out;
-}
-
-@keyframes aboutme5{
-    0%, 100% {
-        transform: translateX(0%);
-    }
-    50% {
-        transform: translateX(2%);
-    }
-}
-
-.about-col-1 .animated-aboutme6{
-    animation: aboutme6 5s ease-in-out infinite;
-    transition: all 1s ease-in-out;
-}
-
-@keyframes aboutme6{
-    0%, 100% {
-        transform: translateX(0%) translateY(0%);
-    }
-    50% {
-        transform: translateX(1%) translateY(2%);
-    }
-}
-
-.about-col-1 .animated-aboutme7{
-    animation: aboutme7 5s ease-in-out infinite;
-    transition: all 1s ease-in-out;
-}
-
-@keyframes aboutme7{
-    0%, 100% {
-        transform: translateX(0%);
-    }
-    50% {
-        transform: translateX(2%);
-    }
-}
-
-.about-col-1 .animated-aboutme8{
-    animation: aboutme8 5s ease-in-out infinite;
-    transition: all 1s ease-in-out;
-}
-
-@keyframes aboutme8{
-    0%, 100% {
-        transform: translateX(0%) translateY(0%);
-    }
-    50% {
-        transform: translateX(-2%) translateY(3%);
-    }
-}
-
-.about-col-1 .animated-aboutme9{
-    animation: aboutme9 5s ease-in-out infinite;
-    transition: all 1s ease-in-out;
-}
-
-@keyframes aboutme9{
-    0%, 100% {
-        transform:scale3d(0.8,0.8,1);
-    }
-    50% {
-        transform:scale3d(1,1,1);
-    }
-}
 
 .about-col-2{
     flex-basis: 65%;
     margin-top: 5%;
+    margin-bottom: 5%;
+    padding-right: 10%;
 }
 
 .about-col-2 h1{
@@ -306,11 +192,19 @@ nav ul li a:hover::after{
     transition: 0.5s;
 }
 
+.tab-links:hover::after{
+    width: 100%;
+}
+
 .tab-links.active-link::after{
     width: 100%;
 }
 .tab-titles{
     margin-top: 5%;
+}
+
+.tab-contents.skills img{
+    margin: 10px;
 }
 
 .tab-contents ul li{
