--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ nav ul li{
 nav ul li a{
     color: #ccd6f6;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 18px;
     font-weight: bold;
     position: relative;
 }
@@ -54,8 +54,8 @@ nav ul li a::after{
     content: '';
     width: 0;
     height: 3px;
-    background-color: #47b4a1;
-    box-shadow: 0 0 5px 0 #47b4a1;
+    background-color: #00E8FF;
+    box-shadow: 0 0 5px 0 #00E8FF;
 
     position: absolute;
     left: 0;
@@ -80,12 +80,35 @@ nav ul li a:hover::after{
 }
 
 .home-text{
-    margin-top: 22%;
+    margin-top: 15%;
     margin-left: 3%;
     margin-bottom: 5%;
     font-size: 30px;
     color: #aab6da;
 }
+
+.home-text .home-logo img{
+    width: 30%;
+    margin-left: 30%;
+    border-radius: 50%;
+    box-shadow: 0 0 10px 5px #00E8FF;
+    animation: pulse 2s infinite;
+}
+
+  @keyframes pulse {
+    0% {
+      -moz-box-shadow: 0 0 0 0 #00E8FF;
+      box-shadow: 0 0 0 0 #00E8FF;
+    }
+    70% {
+        -moz-box-shadow: 0 0 0 20px rgba(204,169,44, 0);
+        box-shadow: 0 0 0 20px rgba(204,169,44, 0);
+    }
+    100% {
+        -moz-box-shadow: 0 0 0 0 rgba(204,169,44, 0);
+        box-shadow: 0 0 0 0 rgba(204,169,44, 0);
+    }
+  }
 
 .home-text h1{
     font-size: 100px;
@@ -95,19 +118,33 @@ nav ul li a:hover::after{
 
 .home-text h1 span{
     font-size: 120px;
-    color: #47b4a1;
+    color: #00E8FF;
 }
 
 .home-image{
     margin-top: 5%;
-    width: 50%;
+    margin-right: 5%;
+    width: 40%;
+    position: relative;
 }
 
 .home-image img{
-    width: 80%;
-    height: auto;
-    box-shadow: 0 0 10px 5px #47b4a1;
-    border-radius: 50% 60% 40% 70%;
+    display: block;
+    position: relative;
+    z-index: 1;
+    width: 100%;
+}
+
+.home-image::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 40%;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+    pointer-events: none;
+    z-index: 2;
 }
 
 /*------------------------about-----------------------*/
@@ -125,7 +162,7 @@ nav ul li a:hover::after{
     flex-wrap: wrap;
     height: auto;
     border-radius: 30px;
-    box-shadow: 0 0 10px 5px #47b4a1;
+    box-shadow: 0 0 10px 5px #00E8FF;
 }
 
 .about-col-1{
@@ -158,7 +195,7 @@ nav ul li a:hover::after{
 }
 
 .about-col-2 h1 span{
-    color:#47b4a1;
+    color:#00E8FF;
 }
 
 .about-col-2 p{
@@ -184,8 +221,8 @@ nav ul li a:hover::after{
     content: '';
     width: 0;
     height: 3px;
-    background-color: #47b4a1;
-    box-shadow: 0 0 5px 0 #47b4a1;
+    background-color: #00E8FF;
+    box-shadow: 0 0 5px 0 #00E8FF;
     position: absolute;
     left: 0;
     bottom: -8px;
@@ -203,8 +240,28 @@ nav ul li a:hover::after{
     margin-top: 5%;
 }
 
-.tab-contents.skills img{
-    margin: 10px;
+.tab-contents.skills.active-tab{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.skillcard{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.skillcard img{
+    margin: 10px 20px;
+    width: 80px;
+    border-radius: 50%;
+    box-shadow: 0 0 5px 4px #00E8FF;
+}
+
+.skillcard h3{
+    font-size: 16px;
 }
 
 .tab-contents ul li{
@@ -216,7 +273,7 @@ nav ul li a:hover::after{
 }
 
 .tab-contents ul li span{
-    color: #2e776b;
+    color: rgb(10, 193, 209);
     font-weight: 500;
     font-size: 16px;
     font-weight: 580;
@@ -230,11 +287,6 @@ nav ul li a:hover::after{
     display: block;
 }
 
-.tab-contents img{
-    width: 80px;
-    border-radius: 50%;
-    box-shadow: 0 0 5px 3px #47b4a1;
-}
 
 
 
