--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body{
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
-
 }
 
 #home{
@@ -121,30 +120,18 @@ nav ul li a:hover::after{
     color: #00E8FF;
 }
 
-.home-image{
+.home-image {
     margin-top: 5%;
     margin-right: 5%;
     width: 40%;
     position: relative;
 }
 
-.home-image img{
+.home-image img {
     display: block;
+    width: 100%;
     position: relative;
-    z-index: 1;
-    width: 100%;
-}
-
-.home-image::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 40%;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
-    pointer-events: none;
-    z-index: 2;
+    border-radius: 50%;
 }
 
 /*------------------------about-----------------------*/
@@ -163,6 +150,11 @@ nav ul li a:hover::after{
     height: auto;
     border-radius: 30px;
     box-shadow: 0 0 10px 5px #00E8FF;
+}
+
+.row:hover{
+    box-shadow: 0 0 10px 5px #00E8FF;
+
 }
 
 .about-col-1{
@@ -190,7 +182,7 @@ nav ul li a:hover::after{
 }
 
 .about-col-2 h1{
-    font-size: 50px;
+    font-size: 72px;
     color: #ccd6f6;
 }
 
@@ -200,7 +192,7 @@ nav ul li a:hover::after{
 
 .about-col-2 p{
     padding-top: 5px;
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .tab-titles{
@@ -287,11 +279,142 @@ nav ul li a:hover::after{
     display: block;
 }
 
+/*------------------------services-----------------------*/
+#services{
+    padding: 50px 8%;
+}
+
+#services .container h1{
+    font-size: 72px;
+    color: #ccd6f6;
+}
+
+#services .container h1 span{
+    color:#00E8FF;
+}
+
+.services-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 100px;
+    margin-top: 50px;
+}
+
+.services-list div{
+    background: #0c2447;
+    padding: 40px;
+    font-size: 18px;
+    font-weight: 550;
+    border-radius: 10px;
+    transition: background 0.5s, transform 0.5s;
+}
+
+.services-list div i{
+    font-size: 72px;
+    margin-bottom: 30px;
+}
+
+.services-list div h2{
+    font-size: 30px;
+    margin-bottom: 15px;
+}
+
+.services-list div a{
+    text-decoration: none;
+    color: #00E8FF;
+    font-size: 15px;
+    margin-top: 20px;
+    display: inline-block;
+}
+
+.services-list div:hover{
+    box-shadow: 0 0 5px 4px #00E8FF;
+    transform: translateY(-10px);
+}
+/*------------------------websites-----------------------*/
+
+#websites{
+    padding: 20px 2%;
+}
+
+#websites .container{
+    background-color: #071427;
+    border-radius: 30px;
+    box-shadow: 0 0 10px 5px #00E8FF;
+}
+
+#websites .container h1{
+    font-size: 72px;
+    color: #ccd6f6;
+    padding-top: 50px;
+    padding-left: 6%;
+}
+#websites .container h1 span{
+    color:#00E8FF;
+}
+.work-list{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 20px 2%;
+}
+
+.work{
+    min-width: 600px;
+    width: 50%;
+}
+
+.work img{
+    margin-left: 5%;
+    width: 90%;
+    margin-bottom: 50px;
+    border-radius: 20px;
+}
+
+/*------------------------games-----------------------*/
+#games{
+    padding: 50px 8%;
+}
+
+#games .container h1{
+    font-size: 72px;
+   
+    color: #ccd6f6;
+}
+#games .container h1 span{
+    color:#00E8FF;
+}
+
+/*------------------------programs-----------------------*/
+
+#programs{
+    padding: 50px 8%;
+}
+
+#programs .container h1{
+    font-size: 72px;
+   
+    color: #ccd6f6;
+}
+#programs .container h1 span{
+    color:#00E8FF;
+}
+
+/*------------------------contact-----------------------*/
+
+#contact{
+    padding: 50px 8%;
+}
+
+#contact .container h1{
+    font-size: 72px;
+   
+    color: #ccd6f6;
+}
+#contact .container h1 span{
+    color:#00E8FF;
+}
 
 
 
 
 
-
-
-/*---------------------------------------42:12
