--- a/style.css
+++ b/style.css
@@ -1,21 +1,23 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'League Spartan', sans-serif;
     box-sizing: border-box;
 }
 body{
-    color: #ccd6f6;
+    color: #cfcdcd;
     background-image: url(images/homeBackground.jpg);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
 }
 
-#home{
-    width: 100%;
-    height: 100vh;
+body h1{
+    font-size: 72px;
+    color: #222222;
 }
+
+/*--------------------------navbar-----------------------*/
 
 nav{
     position: fixed;
@@ -26,13 +28,13 @@ nav{
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-    background-color: #173c48;
-    padding: 10px 8%;
+    background-color: #222222;
+    padding: 10px 5%;
     z-index: 1000;
 }
 
-.logo{
-    width: 240px;
+.nav-logo{
+    width: 60px;
 }
 
 nav ul li{
@@ -42,10 +44,9 @@ nav ul li{
 }
 
 nav ul li a{
-    color: #ccd6f6;
+    color: #f5ede1;
     text-decoration: none;
     font-size: 18px;
-    font-weight: bold;
     position: relative;
 }
 
@@ -53,8 +54,7 @@ nav ul li a::after{
     content: '';
     width: 0;
     height: 3px;
-    background-color: #00E8FF;
-    box-shadow: 0 0 5px 0 #00E8FF;
+    background-color: #cfcdcd;
 
     position: absolute;
     left: 0;
@@ -63,98 +63,80 @@ nav ul li a::after{
 }
 
 nav ul li a:hover{
-    color: #b4c0e6;
+    color: #cfcdcd;
 }
 
 nav ul li a:hover::after{
     width: 100%;
 }
 
+/*--------------------------home----------------------*/
+
 .home{
-    margin-top: 2%;
-    padding: 2% 5%;
     display: flex;
-    justify-content:space-between;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 100vh;
+}
+
+.home-snippet{
+    width: 0;
+    margin-top: 3%;
+}
+
+.home-main{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
-.home-text{
-    margin-top: 15%;
-    margin-left: 3%;
-    margin-bottom: 5%;
-    font-size: 30px;
-    color: #aab6da;
+.home-logo{
+    margin-top: 25%;
+    position: relative;
 }
 
-.home-text .home-logo img{
-    width: 30%;
-    margin-left: 30%;
+.home-logo img {
+    position: absolute;
+    width: 200px;
     border-radius: 50%;
-    box-shadow: 0 0 10px 5px #00E8FF;
-    animation: pulse 2s infinite;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
-  @keyframes pulse {
-    0% {
-      -moz-box-shadow: 0 0 0 0 #00E8FF;
-      box-shadow: 0 0 0 0 #00E8FF;
-    }
-    70% {
-        -moz-box-shadow: 0 0 0 20px rgba(204,169,44, 0);
-        box-shadow: 0 0 0 20px rgba(204,169,44, 0);
-    }
-    100% {
-        -moz-box-shadow: 0 0 0 0 rgba(204,169,44, 0);
-        box-shadow: 0 0 0 0 rgba(204,169,44, 0);
-    }
-  }
+.home-text{
+    margin-top: 8%;
+    font-size: 20px;
+    color: #7d7d7d;
+}
+
 
 .home-text h1{
-    font-size: 100px;
-    margin-top: 20px;
-    color:#ccd6f6;
+    font-size: 60px;
+    color:#7d7d7d;
 }
 
 .home-text h1 span{
-    font-size: 120px;
-    color: #00E8FF;
+    font-size: 72px;
+    color: #595959;
 }
 
-.home-image {
-    margin-top: 5%;
-    margin-right: 5%;
-    width: 40%;
-    position: relative;
-}
-
-.home-image img {
-    display: block;
-    width: 100%;
-    position: relative;
-    border-radius: 50%;
-}
 
 /*------------------------about-----------------------*/
 
 #about{
     margin: 20px 2%;
-    color: #8892b0;
 }
 
 .row{
-    background: #071427;
+    background: #545454;
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
     height: auto;
     border-radius: 30px;
-    box-shadow: 0 0 10px 5px #00E8FF;
-}
-
-.row:hover{
-    box-shadow: 0 0 10px 5px #00E8FF;
-
 }
 
 .about-col-1{
@@ -173,7 +155,6 @@ nav ul li a:hover::after{
     border-radius: 20px;    
 }
 
-
 .about-col-2{
     flex-basis: 65%;
     margin-top: 5%;
@@ -181,18 +162,10 @@ nav ul li a:hover::after{
     padding-right: 10%;
 }
 
-.about-col-2 h1{
-    font-size: 72px;
-    color: #ccd6f6;
-}
-
-.about-col-2 h1 span{
-    color:#00E8FF;
-}
-
 .about-col-2 p{
     padding-top: 5px;
     font-size: 20px;
+    line-height: 1.2;
 }
 
 .tab-titles{
@@ -202,19 +175,22 @@ nav ul li a:hover::after{
 
 .tab-links{
     margin-right: 80px;
-    font-size: 20px;
+    font-size: 24px;
     font-weight: 600;
-    color:#ccd6f6;
+    color:#222222;
     cursor: pointer;
     position: relative;
+}
+
+.tab-links:hover{
+    color: #3b3b3b;
 }
 
 .tab-links::after{
     content: '';
     width: 0;
     height: 3px;
-    background-color: #00E8FF;
-    box-shadow: 0 0 5px 0 #00E8FF;
+    background-color: #222222;
     position: absolute;
     left: 0;
     bottom: -8px;
@@ -247,9 +223,10 @@ nav ul li a:hover::after{
 
 .skillcard img{
     margin: 10px 20px;
-    width: 80px;
+    width: 70px;
     border-radius: 50%;
-    box-shadow: 0 0 5px 4px #00E8FF;
+    background-color: #f5ede1;
+    box-shadow: 0 0 5px 4px #3b3b3b;
 }
 
 .skillcard h3{
@@ -265,7 +242,7 @@ nav ul li a:hover::after{
 }
 
 .tab-contents ul li span{
-    color: rgb(10, 193, 209);
+    color: #222222;
     font-weight: 500;
     font-size: 16px;
     font-weight: 580;
@@ -284,15 +261,6 @@ nav ul li a:hover::after{
     padding: 50px 8%;
 }
 
-#services .container h1{
-    font-size: 72px;
-    color: #ccd6f6;
-}
-
-#services .container h1 span{
-    color:#00E8FF;
-}
-
 .services-list{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -301,7 +269,7 @@ nav ul li a:hover::after{
 }
 
 .services-list div{
-    background: #0c2447;
+    background: #222222;
     padding: 40px;
     font-size: 18px;
     font-weight: 550;
@@ -321,16 +289,18 @@ nav ul li a:hover::after{
 
 .services-list div a{
     text-decoration: none;
-    color: #00E8FF;
+    color: #7d7d7d;
     font-size: 15px;
     margin-top: 20px;
     display: inline-block;
 }
 
 .services-list div:hover{
-    box-shadow: 0 0 5px 4px #00E8FF;
+    background-color: #545454;
+    box-shadow: 0 0 5px 4px #7d7d7d;
     transform: translateY(-10px);
 }
+
 /*------------------------websites-----------------------*/
 
 #websites{
@@ -338,20 +308,15 @@ nav ul li a:hover::after{
 }
 
 #websites .container{
-    background-color: #071427;
+    background: #545454;
     border-radius: 30px;
-    box-shadow: 0 0 10px 5px #00E8FF;
 }
 
 #websites .container h1{
-    font-size: 72px;
-    color: #ccd6f6;
     padding-top: 50px;
     padding-left: 6%;
 }
-#websites .container h1 span{
-    color:#00E8FF;
-}
+
 .work-list{
     display: flex;
     flex-wrap: wrap;
@@ -375,14 +340,6 @@ nav ul li a:hover::after{
     padding: 50px 8%;
 }
 
-#games .container h1{
-    font-size: 72px;
-   
-    color: #ccd6f6;
-}
-#games .container h1 span{
-    color:#00E8FF;
-}
 
 /*------------------------programs-----------------------*/
 
@@ -390,14 +347,6 @@ nav ul li a:hover::after{
     padding: 50px 8%;
 }
 
-#programs .container h1{
-    font-size: 72px;
-   
-    color: #ccd6f6;
-}
-#programs .container h1 span{
-    color:#00E8FF;
-}
 
 /*------------------------contact-----------------------*/
 
@@ -405,16 +354,6 @@ nav ul li a:hover::after{
     padding: 50px 8%;
 }
 
-#contact .container h1{
-    font-size: 72px;
-   
-    color: #ccd6f6;
-}
-#contact .container h1 span{
-    color:#00E8FF;
-}
 
-
-
-
+/*------------------------57:24-----------------------*/
 
