--- a/style.css
+++ b/style.css
@@ -10,11 +10,18 @@ body{
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
+    overflow-x: hidden;
 }
 
 body h1{
+    font-weight: 400;
     font-size: 72px;
     color: #222222;
+}
+
+#home{
+    display: flex;
+    flex-direction: column;
 }
 
 /*--------------------------navbar-----------------------*/
@@ -73,15 +80,31 @@ nav ul li a:hover::after{
 /*--------------------------home----------------------*/
 
 .home{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
     height: 100vh;
 }
 
 .home-snippet{
-    width: 0;
-    margin-top: 3%;
+    position: absolute;
+    width: 100%;
+    z-index: -10;
+}
+
+.home-snippet img{
+    margin-top: 11%;
+    margin-left: 15%;
+    width: 30%;
+}
+
+.home-snippet2{
+    position: absolute;
+    width: 100%;
+    z-index: -10;
+}
+
+.home-snippet2 img{
+    margin-top: 40%;
+    margin-left: 85%;
+    width: 30%;
 }
 
 .home-main{
@@ -92,13 +115,14 @@ nav ul li a:hover::after{
 }
 
 .home-logo{
+    width: 80%;
     margin-top: 25%;
     position: relative;
 }
 
 .home-logo img {
+    width: 22%;
     position: absolute;
-    width: 200px;
     border-radius: 50%;
     left: 50%;
     top: 50%;
@@ -106,7 +130,7 @@ nav ul li a:hover::after{
 }
 
 .home-text{
-    margin-top: 8%;
+    margin-top: 10%;
     font-size: 20px;
     color: #7d7d7d;
 }
@@ -122,6 +146,16 @@ nav ul li a:hover::after{
     color: #595959;
 }
 
+.social-media ul li{
+    display: inline-block;
+    margin: 10px 10px;
+}
+
+.social-media ul li a{
+    color:#7d7d7d;
+    font-size: 40px;
+    cursor: pointer;
+}
 
 /*------------------------about-----------------------*/
 
@@ -225,7 +259,7 @@ nav ul li a:hover::after{
     margin: 10px 20px;
     width: 70px;
     border-radius: 50%;
-    background-color: #f5ede1;
+    background-color: #cfcdcd;
     box-shadow: 0 0 5px 4px #3b3b3b;
 }
 
@@ -265,7 +299,6 @@ nav ul li a:hover::after{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 100px;
-    margin-top: 50px;
 }
 
 .services-list div{
@@ -357,3 +390,8 @@ nav ul li a:hover::after{
 
 /*------------------------57:24-----------------------*/
 
+@media screen and (max-width: 768px) {
+    .home {
+        flex-direction: column;
+    }
+}
