--- a/style.css
+++ b/style.css
@@ -57,7 +57,10 @@ nav{
 }
 
 .nav-logo{
-    width: 60px;
+    width: 80px;
+    background-color: #f0f0ff80;
+    padding: 10px;
+    border-radius: 40px;
 }
 
 
@@ -91,9 +94,14 @@ nav .nav-links ul li{
 .navbar-link.active-link {
     border: 2px solid #646b89;
     border-radius: 25px;
-    background-color: #f0f0ff80;
-  }
-  
+    background-color: #646b89;
+    color: #e6e6f3;
+}
+
+.navbar-link.active-link span{
+    color: #e6e6f3;
+}
+
 nav .social-media{
     padding: 0 60px;
 }
@@ -128,6 +136,8 @@ nav .social-media ul li:hover a{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 500px;
+
 
 }
 
@@ -144,12 +154,25 @@ nav .social-media ul li:hover a{
 
 .blobs{
     position: absolute;
+    transform: translateX(-50%) translateY(10%);
+}
+
+.blobs::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('images/noise.png');
+    opacity: 0.2;
+    pointer-events: none;
 }
 
 .home-logo{
     width: 40%;
     margin-top: 25%;
-    position: relative;
+    position: fixed;
     z-index: -30;
 }
 
@@ -163,12 +186,25 @@ nav .social-media ul li:hover a{
 }
 
 .home-text{
-    margin-top: 10%;
+    position: relative;
+    margin-top: 30%;
+    width: 100%;;
     font-size: 20px;
     color: #646b89;
     z-index: -30;
 }
 
+.parallax-right{
+    position:absolute;
+    top: 0;
+    left: 41%;
+}
+
+.parallax-left{
+    position:absolute;
+    top: 100px;
+    left: 41%;
+}
 
 .home-text h1{
     font-size: 60px;
@@ -250,10 +286,11 @@ nav .social-media ul li:hover a{
 }
 
 .tab-links.active-link{
-    color: #6e78a5;
+    color: #e6e6f3;
     border: 3px solid #6e78a5;
     border-radius: 25px;
-    background-color: #f0f0ff80;
+    background-color: #6e78a5;
+    font-weight: 520;
 }
 
 .tab-contents.skills.active-tab{
@@ -272,9 +309,10 @@ nav .social-media ul li:hover a{
 .skillcard img{
     margin: 10px 20px;
     width: 70px;
+    height: 70px;
     border-radius: 50%;
     background-color: #646b89;
-    box-shadow: 0 0 5px 4px #6e78a5;
+    box-shadow: 3px 3px 3px 0px #6e78a5;
 }
 
 .skillcard h3{
@@ -322,7 +360,7 @@ nav .social-media ul li:hover a{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     grid-gap: 40px;
-    color: #f0f0ffc4;
+    color: #e6e6f3;
 }
 
 .services-list div{
@@ -346,7 +384,7 @@ nav .social-media ul li:hover a{
 
 .services-list div a{
     text-decoration: none;
-    color: #f0f0ffc4;
+    color: #e6e6f3;
     font-size: 15px;
     margin-top: 20px;
     display: inline-block;
@@ -359,6 +397,10 @@ nav .social-media ul li:hover a{
 }
 
 /*------------------------websites-----------------------*/
+#my-work{
+    display: flex;
+}
+
 
 #websites{
     padding: 100px 0;
@@ -366,6 +408,8 @@ nav .social-media ul li:hover a{
 }
 
 #websites .container{
+    height: 700px;
+    width: 100%;
     background-color: transparent;
     -webkit-backdrop-filter: blur(40px);
     backdrop-filter: blur(40px);
@@ -374,8 +418,7 @@ nav .social-media ul li:hover a{
 
 
 .website-list{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    display: flex;
     grid-gap: 40px;
 }
 
@@ -386,8 +429,8 @@ nav .social-media ul li:hover a{
 }
 
 .website img{
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: 400px;
     border-radius: 10px;
     display: block;
     transition: transform 0.5s;
@@ -458,6 +501,8 @@ nav .social-media ul li:hover a{
 }
 
 #games .container{
+    height: 700px;
+    width: 100%;
     background-color: transparent;
     -webkit-backdrop-filter: blur(40px);
     backdrop-filter: blur(40px);
@@ -465,8 +510,7 @@ nav .social-media ul li:hover a{
 }
 
 .game-list{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    display: flex;
     grid-gap: 40px;
 }
 
@@ -477,8 +521,8 @@ nav .social-media ul li:hover a{
 }
 
 .game img{
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: 400px;
     border-radius: 10px;
     display: block;
     transition: transform 0.5s;
@@ -547,6 +591,8 @@ nav .social-media ul li:hover a{
 }
 
 #programs .container{
+    height: 700px;
+    width: 100%;
     background-color: transparent;
     -webkit-backdrop-filter: blur(40px);
     backdrop-filter: blur(40px);
@@ -554,8 +600,7 @@ nav .social-media ul li:hover a{
 }
 
 .program-list{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    display: flex;
     grid-gap: 40px;
 }
 
@@ -566,8 +611,8 @@ nav .social-media ul li:hover a{
 }
 
 .program img{
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: 400px;
     border-radius: 10px;
     display: block;
     transition: transform 0.5s;
@@ -628,7 +673,7 @@ nav .social-media ul li:hover a{
 /*------------------------contact-----------------------*/
 
 #contact{
-    padding: 100px 0 20px 0;
+    padding: 8100px 0 20px 0;
 }
 
 #contact .container{
@@ -749,6 +794,10 @@ nav .fas{
 
 @media screen and (max-width: 1450px){
 
+    body{
+        overflow-x: hidden;
+    }
+
     #home, #services, #about, #websites, #games, #programs, #contact{
         height: 100%;
     }
@@ -800,6 +849,17 @@ nav .fas{
         color: #f0f0ff80;
     }
 
+    .navbar-link.active-link {
+        border: 2px solid #f0f0ff;
+        background-color: #f0f0ff;
+        color: #646b89;
+    }
+    
+    .navbar-link.active-link i{
+        color: #646b89;
+    }
+    
+
     .mobile-background{
         display: flex;
         position: fixed;
@@ -807,7 +867,26 @@ nav .fas{
         z-index: -1000;
     }
     
+    #my-work{
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+
+    .website-list, .game-list, .program-list{
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+        grid-gap: 40px;   
+    }
+
+    #websites .container, #games .container, #programs .container{
+        height: 100%;
+    }
     
+    #websites .container img, #games .container img, #programs .container img{
+        max-width: 100%;
+        height: auto;
+    }
+
 }
 
 @media screen and (max-width: 768px) {
@@ -817,6 +896,7 @@ nav .fas{
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
+        margin-bottom: 0;
     }
 
     .blobfixed{
@@ -824,13 +904,18 @@ nav .fas{
     }
 
     .home-text{
-        transform: translateY(200px);
+        font-size: 15px;
+        transform: translateY(300px);
         z-index: 10;
+        left: -50px
+    }
+
+    .home-text h1{
+        font-size: 20px;
     }
 
     .home-logo{
-        transform: scale(2);
-        z-index: 10;
+        display: none;
     }
 
     body h1{
@@ -840,6 +925,7 @@ nav .fas{
     body img{
         padding-right: 20px;
         max-width: 100%;
+        height: auto;
     }
 
     .layer{
@@ -877,4 +963,7 @@ nav .fas{
         transform: scale(1);
     }
     
+    .skillcard img{
+        padding-right: 0;
+    }
 }
